--- a/include/themes/modern/main.css
+++ b/include/themes/modern/main.css
@@ -1506,6 +1506,7 @@ th.secondarySort {
 
 .tableRowGraph td {
 	padding: 3px;
+	vertical-align: top;
 }
 
 .image_table {
